<resources>
    <string name="app_name">MovieNoti</string>

    <!--MainActivity-->
    <string name="cgv">CGV</string>
    <string name="megabox">Megabox</string>
    <string name="lotte_cinema">LOTTE Cinema</string>
    <string name="reservation">예약목록</string>
    <string name="settings">설정</string>

    <!--CgvFragment-->
    <string name="format_reservation_rate">예매율%s%%</string>
    <string name="format_released_date"><![CDATA[<B>%s 개봉 <I>%s</I></B>]]></string>
    <string name="cgv_reservation_rate_order">· 예매율순</string>
    <string name="cgv_abc_order">· 가나다순</string>
    <string name="search_hint">영화 이름을 검색해주세요.</string>

    <!--ReservationFragment-->
    <string name="reservation_title">예약 영화 목록</string>
    <string name="set_notification">알림 설정</string>
    <string name="reservation_empty">등록한 영화 오픈 알림이 없어요</string>

    <!--SettingFragment-->
    <string name="setting_title">설정</string>
    <string name="setting_notification_title">알림 설정</string>
    <string name="setting_notification_content">영화 오픈 알림을 설정해요. 무비노티는 광고성 푸시가 없으니 영화 오픈 알림을 받으시고 싶으시면 알림 설정을 해주세요.</string>

    <string name="setting_review_title">리뷰 쓰러 가기</string>
    <string name="setting_review_content">무비노티에 대한 느낀점을 리뷰로 적어주시면 힘이 돼요!</string>

    <string name="setting_version_title">버전 정보</string>

    <string name="setting_version_content_format">현재 버전: %s\n최신 버전: %s</string>
    <string name="setting_version_content">현재 버전:\n최신 버전:</string>
    <string name="setting_version_update">업데이트</string>
    <string name="setting_version_latest">최신 버전입니다</string>

    <!--Notification-->

    <!--AlertDialog-->
    <string name="dialog_default_title">알림</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_close">닫기</string>
    <string name="dialog_finish">종료</string>
    <string name="dialog_retry">재시도</string>
    <string name="dialog_edit">수정</string>
    <string name="dialog_delete">삭제</string>
    <string name="dialog_setting">설정 화면</string>
    <string name="dialog_update">업데이트</string>

    <string name="dialog_loading_message">서버에 등록 중이에요. 잠시만 기다려주세요.</string>

    <string name="dialog_post_notification_message">영화 오픈은 알림을 통해서 알려드려요. 알림을 받기 위해서 알림 권한이 필요해요.</string>
    <string name="dialog_reject_post_notification_message">영화 오픈 알림을 받기 원하시면 설정화면에서 알림 권한을 허용해주세요.</string>

    <string name="dialog_movie_info_title">%s 영화관을 선택했어요. 영화 종류를 선택해주세요.</string>

    <string name="dialog_reservation_title">영화 오픈 알림</string>
    <!--brand(cgv) theater 영화관에 movieTitle movieFormat 영화가 24년 2월 19일에 올라오면 알림을 받아요.-->
    <string name="dialog_reservation_message_edit_format">%s 영화관에 %s%s 영화가 %s에 올라오면 알림을 받아요.  </string>

    <string name="dialog_reservation_delete_message">정말 %s 영화 오픈 알림을 삭제할까요?</string>

    <string name="dialog_update_forced_message">필수로 추가해야하는 업데이트 내용이 있어요. 번거로우시겠지만 업데이트를 부탁드릴게요.</string>
    <string name="dialog_update_optional_message">새로운 업데이트 내용이 있어요. 업데이트를 하시겠어요?</string>

    <!--DatePicker-->
    <string name="date_picker_format_title">%s 영화를 선택했어요. 날짜를 선택해주세요.</string>

    <!--TheaterBottomSheetDialogFragment-->
    <!--    와 %s 일자를 선택했어요.-->
    <string name="bottom_sheet_format_title"><![CDATA[<b>%s</b>에 <b>%s</b>]]> 영화 오픈 알림을 설정해요. 영화관을 선택해주세요.</string>

    <string name="seoul">서울</string>
    <string name="gyeonggi">경기</string>
    <string name="inchon">인천</string>
    <string name="gangwon">강원</string>
    <string name="daejeon_chungcheong">대전/충청</string>
    <string name="daegu">대구</string>
    <string name="busan_ulsan">부산/울산</string>
    <string name="gyeongsang">경상</string>
    <string name="gwangju_jeolla_jeju">광주/전라/제주</string>

    <string name="GANGNAM">강남</string>
    <string name="GANGBEYON">강변</string>
    <string name="GUNDAE">건대</string>
    <string name="GURO">구로</string>
    <string name="DAEHACKRO">대학로</string>
    <string name="DONGDAEMUN">동대문</string>
    <string name="DEOUNGCHON">등촌</string>
    <string name="MYEONGDONG">명동</string>
    <string name="MYEONGDONG_CINE">명동역 시네라이브러리</string>
    <string name="MIA">미아</string>
    <string name="BANGHAK">방학</string>
    <string name="BULGWANG">불광</string>
    <string name="SANGBONG">상봉</string>
    <string name="SUNGSIN">성신여대입구</string>
    <string name="SONGPA">송파</string>
    <string name="SUYU">수유</string>
    <string name="SINCHON_ATREON">신촌아트레온</string>
    <string name="APGUJEONG">압구정</string>
    <string name="YEOUIDO">여의도</string>
    <string name="YEONNAM">연남 with 토레타!</string>
    <string name="YEONGDEUNGPO">영등포</string>
    <string name="WANGSIMNI">왕십리</string>
    <string name="YONGSAN">용산</string>
    <string name="JUNGGYE">중계</string>
    <string name="CUNHO">천호</string>
    <string name="CHUNGDAM">청담씨네시티</string>
    <string name="PICCADILLY">피카디리1958</string>
    <string name="HAGYE">하계</string>
    <string name="HONGDAE">홍대</string>
</resources>